--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8090
+  
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
@@ -10,5 +13,8 @@ spring:
     properties:
       hibernate.format_sql: true
       
-server:
-  port: 8090
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
